--- a/hawccms/package.json
+++ b/hawccms/package.json
@@ -14,12 +14,14 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^0.142.2",
-    "@sanity/components": "^0.142.5",
-    "@sanity/core": "^0.142.5",
-    "@sanity/default-layout": "^0.142.5",
-    "@sanity/default-login": "^0.142.3",
-    "@sanity/desk-tool": "^0.142.5",
+    "@sanity/base": "^0.142.6",
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/components": "^0.142.6",
+    "@sanity/core": "^0.142.6",
+    "@sanity/default-layout": "^0.142.7",
+    "@sanity/default-login": "^0.142.6",
+    "@sanity/desk-tool": "^0.142.7",
+    "graphql": "^14.5.8",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
